
[metadata]
name = pyTEM
version = 0.1.0
description = A Python wrapper for the Thermo Fisher Scientific microscope scripting interface
long_description = long_description
url = https://github.com/mrl280/tem-scripting-package/
author = BASF TEM Laboratory
author_email = philipp.mueller@basf.com
license = MIT
packages =
    TEMInterface
    uED


[options]
python_requires = >=3.6,
install_requires =
    numpy
    pandas
    hyperspy
    scipy
    tifffile
    opencv-python
    setuptools
    comtypes
    matplotlib
